--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,11 @@
             <img src="{{ url_for('static', filename='uploads/' + epreuve.image_filename) }}" width="150">
             {% endif %}
         </li>
+        <a href="{{ url_for('main.update', epreuve_id=epreuve.id) }}">Modifier</a>
+       <form action="{{ url_for('main.delete', epreuve_id=epreuve.id) }}" method="post" style="display:inline;">
+        <button type="submit">Supprimer</button>
+      </form>
+        <br>
         {% endfor %}
     </ul>
 </body>
