--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,25 +5,21 @@
 </head>
 <body>
     <h1>Epreuves</h1>
-    <a href="{{ url_for('main.add') }}">Ajouter une épreuve</a>
+    <a href="{{ url_for('main.add_epreuves') }}">Ajouter une épreuve</a>
     <ul>
         {% for epreuve in epreuves %}
         <li>
             <strong>{{ epreuve.nom_epreuve }}</strong> ({{ epreuve.date_epreuve}})
             <ul>
-                {% for offre in epreuve.offres %}
-                <li>{{ offre.type_offre }} - {{ offre.nombre_personne }} pers - {{ offre.prix }} €</li>
-                {% endfor %}
+<!--                {% for offre in epreuve.offres %}-->
+<!--                <li>{{ offre.type_offre }} - {{ offre.nombre_personne }} pers - {{ offre.prix }} €</li>-->
+<!--                {% endfor %}-->
             </ul>
             {% if epreuve.image_filename %}
             <img src="{{ url_for('static', filename='uploads/' + epreuve.image_filename) }}" width="150">
             {% endif %}
         </li>
-        <a href="{{ url_for('main.update', epreuve_id=epreuve.id) }}">Modifier</a>
-       <form action="{{ url_for('main.delete', epreuve_id=epreuve.id) }}" method="post" style="display:inline;">
-        <button type="submit">Supprimer</button>
-      </form>
-        <br>
+        <a href="{{ url_for('main.epreuve_details', nom_epreuve=epreuve.nom_epreuve) }}">Plus de détails</a>
         {% endfor %}
     </ul>
 </body>
