--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -30,6 +30,6 @@
         <button type="submit">Enregistrer les modifications</button>
     </form>
 
-    <a href="{{ url_for('main.home') }}">Retour</a>
+    <a href="{{ url_for('main.all_epreuve') }}">Retour</a>
 </body>
 </html>
