--- a/app/templates/paiement.html
+++ b/app/templates/paiement.html
@@ -119,7 +119,12 @@
       <div class="card p-4">
         <img src="https://cdn-icons-png.flaticon.com/512/891/891462.png" class="logo" alt="Logo">
         <h2 class="mb-4 text-center"><i class="fa fa-lock form-icon"></i>Paiement sécurisé</h2>
+
+            <h3>
+                {{ offre.type_offre }} : {{ offre.nombre_personne }} personne(s) - {{ offre.prix }} €
+            </h3>
         <form class="needs-validation" novalidate>
+            <h4>Personne n°1:</h4>
           <div class="mb-3">
             <label for="firstName" class="form-label"><i class="fa fa-user form-icon"></i>Prénom</label>
             <input type="text" class="form-control" id="firstName" required>
@@ -135,40 +140,90 @@
             <input type="email" class="form-control" id="email" placeholder="vous@example.com">
             <div class="invalid-feedback">Email invalide.</div>
           </div>
-          <div class="mb-3">
-            <label for="address" class="form-label"><i class="fa fa-location-dot form-icon"></i>Adresse</label>
-            <input type="text" class="form-control" id="address" required>
+          <hr class="my-3">
+
+            {% if offre.nombre_personne == 2 %}
+                        <h4>Personne n°2:</h4>
+            <div class="mb-3">
+            <label for="firstName" class="form-label"><i class="fa fa-user form-icon"></i>Prénom</label>
+            <input type="text" class="form-control" id="firstName" required>
             <div class="invalid-feedback">Champ requis.</div>
           </div>
-          <div class="row">
-            <div class="col-6 mb-3">
-              <label for="country" class="form-label"><i class="fa fa-globe form-icon"></i>Pays</label>
-              <select class="form-select" id="country" required>
-                <option value="">Choisir...</option>
-                <option>France</option>
-                <option>Belgique</option>
-                <option>Suisse</option>
-              </select>
-              <div class="invalid-feedback">Sélectionnez un pays.</div>
-            </div>
-            <div class="col-6 mb-3">
-              <label for="zip" class="form-label"><i class="fa fa-map-pin form-icon"></i>Code postal</label>
-              <input type="text" class="form-control" id="zip" required>
-              <div class="invalid-feedback">Champ requis.</div>
-            </div>
+          <div class="mb-3">
+            <label for="lastName" class="form-label"><i class="fa fa-user form-icon"></i>Nom</label>
+            <input type="text" class="form-control" id="lastName" required>
+            <div class="invalid-feedback">Champ requis.</div>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label"><i class="fa fa-envelope form-icon"></i>Email</label>
+            <input type="email" class="form-control" id="email" placeholder="vous@example.com">
+            <div class="invalid-feedback">Email invalide.</div>
           </div>
           <hr class="my-3">
+
+            {% elif offre.nombre_personne == 4 %}
+
+            <h4>Personne n°2:</h4>
+
+            <div class="mb-3">
+            <label for="firstName" class="form-label"><i class="fa fa-user form-icon"></i>Prénom</label>
+            <input type="text" class="form-control" id="firstName" required>
+            <div class="invalid-feedback">Champ requis.</div>
+          </div>
+          <div class="mb-3">
+            <label for="lastName" class="form-label"><i class="fa fa-user form-icon"></i>Nom</label>
+            <input type="text" class="form-control" id="lastName" required>
+            <div class="invalid-feedback">Champ requis.</div>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label"><i class="fa fa-envelope form-icon"></i>Email</label>
+            <input type="email" class="form-control" id="email" placeholder="vous@example.com">
+            <div class="invalid-feedback">Email invalide.</div>
+          </div>
+          <hr class="my-3">
+
+            <h4>Personne n°3:</h4>
+
+            <div class="mb-3">
+            <label for="firstName" class="form-label"><i class="fa fa-user form-icon"></i>Prénom</label>
+            <input type="text" class="form-control" id="firstName" required>
+            <div class="invalid-feedback">Champ requis.</div>
+          </div>
+          <div class="mb-3">
+            <label for="lastName" class="form-label"><i class="fa fa-user form-icon"></i>Nom</label>
+            <input type="text" class="form-control" id="lastName" required>
+            <div class="invalid-feedback">Champ requis.</div>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label"><i class="fa fa-envelope form-icon"></i>Email</label>
+            <input type="email" class="form-control" id="email" placeholder="vous@example.com">
+            <div class="invalid-feedback">Email invalide.</div>
+          </div>
+          <hr class="my-3">
+
+                        <h4>Personne n°4:</h4>
+            <div class="mb-3">
+            <label for="firstName" class="form-label"><i class="fa fa-user form-icon"></i>Prénom</label>
+            <input type="text" class="form-control" id="firstName" required>
+            <div class="invalid-feedback">Champ requis.</div>
+          </div>
+          <div class="mb-3">
+            <label for="lastName" class="form-label"><i class="fa fa-user form-icon"></i>Nom</label>
+            <input type="text" class="form-control" id="lastName" required>
+            <div class="invalid-feedback">Champ requis.</div>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label"><i class="fa fa-envelope form-icon"></i>Email</label>
+            <input type="email" class="form-control" id="email" placeholder="vous@example.com">
+            <div class="invalid-feedback">Email invalide.</div>
+          </div>
+          <hr class="my-3">
+
+            {% endif %}
+
           <div class="form-check mb-2">
             <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
             <label class="form-check-label" for="credit"><i class="fa fa-credit-card form-icon"></i>Crédit</label>
-          </div>
-          <div class="form-check mb-2">
-            <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
-            <label class="form-check-label" for="debit"><i class="fa fa-university form-icon"></i>Débit</label>
-          </div>
-          <div class="form-check mb-3">
-            <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
-            <label class="form-check-label" for="paypal"><i class="fa fa-paypal form-icon"></i>PayPal</label>
           </div>
           <div class="mb-3">
             <label for="cc-name" class="form-label"><i class="fa fa-id-card form-icon"></i>Nom sur la carte</label>
