--- a/app/templates/paiement.html
+++ b/app/templates/paiement.html
@@ -123,7 +123,7 @@
             <h3>
                 {{ offre.type_offre }} : {{ offre.nombre_personne }} personne(s) - {{ offre.prix }} €
             </h3>
-        <form class="needs-validation" novalidate>
+        <form method="POST" action="{{ url_for('paiement.paiement_epreuve', type_offre = offre.type_offre) }}" class="needs-validation" novalidate >
             <h4>Personne n°1:</h4>
           <div class="mb-3">
             <label for="firstName" class="form-label"><i class="fa fa-user form-icon"></i>Prénom</label>
@@ -222,7 +222,7 @@
             {% endif %}
 
           <div class="form-check mb-2">
-            <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
+            <input id="credit" name="card_number" type="radio" class="form-check-input" checked required>
             <label class="form-check-label" for="credit"><i class="fa fa-credit-card form-icon"></i>Crédit</label>
           </div>
           <div class="mb-3">
@@ -250,6 +250,11 @@
           <div class="d-grid mt-3">
             <button class="btn btn-primary btn-lg" type="submit">Valider</button>
           </div>
+
+          {% if error %}
+  <div class="error">{{ error }}</div>
+{% endif %}
+
         </form>
       </div>
     </div>
