ajout de la fonc billet restant et billet vendu

--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -17,11 +17,20 @@
         <label>Prix Solo:</label>
         <input type="number" name="prix_solo" required><br>
 
+        <label>Nombre de place:</label>
+        <input type="number" name="nbr_place_solo" required><br>
+
         <label>Prix Duo:</label>
         <input type="number" name="prix_duo" required><br>
 
+        <label>Nombre de place:</label>
+        <input type="number" name="nbr_place_duo" required><br>
+
         <label>Prix Family:</label>
         <input type="number" name="prix_family" required><br>
+
+        <label>Nombre de place:</label>
+        <input type="number" name="nbr_place_family" required><br>
 
         <label>Image:</label>
         <input type="file" name="image" required><br>
