--- a/app/templates/paiement_success.html
+++ b/app/templates/paiement_success.html
@@ -7,7 +7,7 @@
 <body>
 
 <h2>Paiement accepté ✅</h2>
-<a href="{{url_for ('ticket.ticket_detail' , ticket_id = ticket.id)}}">Voir mon ticket</a>
+<a href="{{url_for ('utilisateur.ticket_detail' , ticket_id = ticket.id)}}">Voir mon ticket</a>
 <a href="{{url_for ('main.home')}}">Retour à l'accueil</a>
 
 
