--- a/app/templates/profil.html
+++ b/app/templates/profil.html
@@ -3,7 +3,7 @@
 {% block title %}Accueil{% endblock %}
 
 {% block content %}
-  <h2>Informations personnelles</h2>
+  <h1>Informations personnelles</h1>
     <table border="1" cellpadding="5" cellspacing="0">
   <tr>
     <th>Nom</th>
@@ -16,9 +16,9 @@
     <td>{{ current_user.email }}</td>
 </tr>
         </table>
-            <form method="post" action="{{ url_for('employe.employe_dashboard_post') }}">
+            <form method="post" action="{{ url_for('utilisateur.utilisateur_dashboard_post') }}">
 
-                <input type="hidden" name="update_employe" value="1">
+                <input type="hidden" name="update_utilisateur" value="1">
                 <input type="hidden" name="user_id" value="{{ current_user.id }}">
 
 
@@ -35,4 +35,15 @@
             </form>
 <br>
 <hr>
+
+  <h2>Mes Billets</h2>
+
+<ul>
+    {% for ticket in tickets %}
+    <li>
+        <a href="{{url_for ('utilisateur.ticket_detail' , ticket_id = ticket.id)}}">Voir mon ticket</a>
+    </li>
+    {% endfor %}
+</ul>
+
 {% endblock %}
