--- a/app/templates/ticket_details.html
+++ b/app/templates/ticket_details.html
@@ -75,7 +75,7 @@
 
 
 <form action="{{ url_for('ticket.ticket_pdf', ticket_id=ticket.id) }}" method="post">
-    <button type="submit">Télécharger le PDF</button>
+    <button type="submit">Télécharger le PDF: {{ ticket.offre.type_offre}}</button>
 </form>
 
 </body>
