affichage tickets dans les espace de profils

--- a/app/templates/employe.html
+++ b/app/templates/employe.html
@@ -35,4 +35,17 @@
             </form>
 <br>
 <hr>
+  <h2>Mes Billets</h2>
+
+<ul>
+  {% for ticket in tickets %}
+    <li>
+      <a href="{{ url_for('employe.ticket_detail', ticket_id=ticket.id) }}">
+        Voir mon ticket n°{{ ticket.id }}
+      </a>
+    </li>
+  {% else %}
+    <li>Aucun billet acheté.</li>
+  {% endfor %}
+</ul>
 {% endblock %}
