--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -110,4 +110,19 @@
   </tr>
   {% endfor %}
 </table>
+
+<h2>Mes Billets</h2>
+
+<ul>
+  {% for ticket in tickets %}
+    <li>
+      <a href="{{ url_for('admin.ticket_detail', ticket_id=ticket.id) }}">
+        Voir mon ticket n°{{ ticket.id }}
+      </a>
+    </li>
+  {% else %}
+    <li>Aucun billet acheté.</li>
+  {% endfor %}
+</ul>
+
 {% endblock %}
