fin des dashboard, ajout tableau stats des ventes et classement, plus modif paiement accepté

--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -111,13 +111,42 @@
   {% endfor %}
 </table>
 
-<h2>Mes Billets</h2>
+<br>
+<hr>
+<br>
 
+
+<table border="1" cellpadding="5" cellspacing="0">
+  <tr>
+    <th>ID</th>
+    <th>Nom de l'offre (type_offre)</th>
+    <th>Nombre de personne maximum</th>
+    <th>Prix</th>
+    <th>Billet restant</th>
+    <th>Billet vendu</th>
+  </tr>
+  {% for offre in offres %}
+  <tr>
+    <td>{{ offre.id }}</td>
+    <td>{{ offre.type_offre }}</td>
+    <td>{{ offre.nombre_personne }} personne(s)</td>
+    <td>{{ offre.prix }} euro</td>
+    <td>{{ offre.bi_restant }}</td>
+    <td>{{ offre.bi_vendu }}</td>
+  </tr>
+  {% endfor %}
+</table>
+
+
+<br>
+<hr>
+
+<h2>Mes Billets</h2>
 <ul>
   {% for ticket in tickets %}
     <li>
-      <a href="{{ url_for('admin.ticket_detail', ticket_id=ticket.id) }}">
-        Voir mon ticket n°{{ ticket.id }}
+      <a href="{{ url_for('admin.ticket_detail', ticket_id=ticket.id) }}" target="_blank">
+        Voir mon ticket n°{{ ticket.id }} - {{ ticket.offre.type_offre }}
       </a>
     </li>
   {% else %}
