--- a/app/templates/paiement_success.html
+++ b/app/templates/paiement_success.html
@@ -7,7 +7,14 @@
 <body>
 
 <h2>Paiement accepté ✅</h2>
-<a href="{{url_for ('utilisateur.ticket_detail' , ticket_id = ticket.id)}}">Voir mon ticket</a>
+
+{% if current_user.role == 'admin' %}
+<a href="{{url_for ('admin.admin_dashboard' , ticket_id = ticket.id)}}">Voir mon ticket Dans mon espace</a>
+{% elif current_user.role == 'employe' %}
+<a href="{{url_for ('employe.employe_dashboard' , ticket_id = ticket.id)}}">Voir mon ticket Dans mon espace</a>
+{% elif current_user.role == 'utilisateur' %}
+<a href="{{url_for ('utilisateur.utilisateur_dashboard' , ticket_id = ticket.id)}}">Voir mon ticket Dans mon espace</a>
+{% endif %}
 <a href="{{url_for ('main.home')}}">Retour à l'accueil</a>
 
 
