--- a/app/templates/profil.html
+++ b/app/templates/profil.html
@@ -41,8 +41,8 @@
 <ul>
   {% for ticket in tickets %}
     <li>
-      <a href="{{ url_for('utilisateur.ticket_detail', ticket_id=ticket.id) }}">
-        Voir mon ticket n°{{ ticket.id }}
+      <a href="{{ url_for('utilisateur.ticket_detail', ticket_id=ticket.id) }}" target="_blank">
+        Voir mon ticket n°{{ ticket.id }} - {{ ticket.offre.type_offre }}
       </a>
     </li>
   {% else %}
