--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Contact</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Accueil{% endblock %}
+{% block content %}
+
 <h2>Contactez-nous</h2>
 <form method="POST">
   <label>Nom :</label><br>
@@ -19,5 +16,4 @@
   <button type="submit">Envoyer</button>
 </form>
 
-</body>
-</html>
+{% endblock %}
