continuation wtform cote admin

--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -8,26 +8,63 @@
     <h1>Modifier l'épreuve</h1>
 
     <form method="post" enctype="multipart/form-data">
-        <label>Nom:</label>
-        <input type="text" name="nom_epreuve" value="{{ epreuve.nom_epreuve }}" ><br>
+<!--        <label>Nom:</label>-->
+<!--        <input type="text" name="nom_epreuve" value="{{ epreuve.nom_epreuve }}" ><br>-->
 
-        <label>Date:</label>
-        <input type="date" name="date_epreuve" value="{{ epreuve.date_epreuve }}"><br>
+<!--        <label>Date:</label>-->
+<!--        <input type="date" name="date_epreuve" value="{{ epreuve.date_epreuve }}"><br>-->
 
-        <label>Prix Solo:</label>
-        <input type="number" step="0.1" name="prix_solo" value="{% for offre in epreuve.offres if offre.type_offre=='solo' %}{{ offre.prix }}{% endfor %}"><br>
+<!--        <label>Prix Solo:</label>-->
+<!--        <input type="number" step="0.1" name="prix_solo" value="{% for offre in epreuve.offres if offre.type_offre=='solo' %}{{ offre.prix }}{% endfor %}"><br>-->
 
-        <label>Prix Duo:</label>
-        <input type="number" step="0.1" name="prix_duo" value="{% for offre in epreuve.offres if offre.type_offre=='duo' %}{{ offre.prix }}{% endfor %}"><br>
+<!--        <label>Prix Duo:</label>-->
+<!--        <input type="number" step="0.1" name="prix_duo" value="{% for offre in epreuve.offres if offre.type_offre=='duo' %}{{ offre.prix }}{% endfor %}"><br>-->
 
-        <label>Prix Family:</label>
-        <input type="number" step="0.1" name="prix_family" value="{% for offre in epreuve.offres if offre.type_offre=='family' %}{{ offre.prix }}{% endfor %}"><br>
+<!--        <label>Prix Family:</label>-->
+<!--        <input type="number" step="0.1" name="prix_family" value="{% for offre in epreuve.offres if offre.type_offre=='family' %}{{ offre.prix }}{% endfor %}"><br>-->
 
-        <label>Nouvelle image:</label>
-        <input type="file" name="image"><br>
-        <small>Image actuelle : {{ epreuve.image_filename }}</small><br>
+<!--        <label>Nouvelle image:</label>-->
+<!--        <input type="file" name="image"><br>-->
+<!--        <small>Image actuelle : {{ epreuve.image_filename }}</small><br>-->
 
-        <button type="submit">Enregistrer les modifications</button>
+<!--        <button type="submit">Enregistrer les modifications</button>-->
+
+        {{ form.hidden_tag() }}
+
+        {{ form.new_nom_epreuve.label }}
+        {{ form.new_nom_epreuve() }}
+
+
+        {{ form.new_date_epreuve.label }}
+<!--        {{ form.new_date_epreuve(class="form-control", type="datetime-local") }}-->
+        {{ form.new_date_epreuve() }}
+
+
+        {{ form.new_prix_solo.label }}
+        {{ form.new_prix_solo() }}
+        {{ form.new_nbr_place_solo.label }}
+        {{ form.new_nbr_place_solo() }}
+
+        {{ form.new_prix_duo.label }}
+        {{ form.new_prix_duo() }}
+        {{ form.new_nbr_place_duo.label }}
+        {{ form.new_nbr_place_duo() }}
+
+        {{ form.new_prix_family.label }}
+        {{ form.new_prix_family() }}
+        {{ form.new_nbr_place_family.label }}
+        {{ form.new_nbr_place_family() }}
+
+
+        {{ form.new_image.label }}
+        {{ form.new_image() }}
+
+
+
+
+
+<!--        <button type="submit">Ajouter</button>-->
+        {{ form.new_submit }}
     </form>
 
     <a href="{{ url_for('main.all_epreuve') }}">Retour</a>
