--- a/app/templates/epreuve.html
+++ b/app/templates/epreuve.html
@@ -30,7 +30,9 @@
 
     <a href="{{ url_for('main.update', epreuve_id=epreuve.id) }}">Modifier</a>
        <form action="{{ url_for('main.delete', epreuve_id=epreuve.id) }}" method="post" style="display:inline;">
-        <button type="submit">Supprimer</button>
+           {{ form.hidden_tag() }}
+           {{ form.submit() }}
+<!--        <button type="submit">Supprimer</button>-->
       </form>
 
 
